--- a/ProductMicroservice/docker-compose.yml
+++ b/ProductMicroservice/docker-compose.yml
@@ -1,8 +1,43 @@
-version: '3.4'
+name : ProductMicroservice-CI
+trigger:
+  branches:
+    include:
+      - master
+  paths:
+    include:
+      - */ProductMicroservice/*
 
-services:
-  productmicroservice:
-    image: ${DOCKER_REGISTRY-}productmicroservice
-    build:
-      context: .
-      dockerfile: ProductMicroservice\Dockerfile
+pool:
+  ## vmImage: 'ubuntu-latest'
+  vmImage: 'windows-latest'
+
+variables:
+  ImageName: 'mehzan07/ProductMicroservice:$(Build.BuildId)'
+
+stages:
+- stage: Build
+  displayName: Build image
+  jobs:  
+  - job: Build
+    displayName: Build and push Docker image
+    steps:
+    - task: Docker@1      
+      inputs:
+        containerregistrytype: 'Container Registry'
+        dockerRegistryEndpoint: 'Docker Hub'
+        command: 'Build an image'
+        dockerFile: '**/ProductMicroservice/ProductMicroservice/Dockerfile'
+        imageName: '$(ImageName)'
+        useDefaultContext: false
+        buildContext: 'ProductMicroservice'
+      displayName: 'Build the Docker image'
+
+    - task: Docker@1      
+      inputs:
+        containerregistrytype: 'Container Registry'
+        dockerRegistryEndpoint: 'Docker Hub'
+        command: 'Push an image'
+        imageName: '$(ImageName)'
+      condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
+      displayName: 'Push the Docker image to Dockerhub'
+      
