--- a/Pipelines/Product-docker-CI.yml
+++ b/Pipelines/Product-docker-CI.yml
@@ -5,7 +5,7 @@ trigger:
       - master
   paths:
     include:
-      - */ProductMicroservice/*
+      - ProductMicroservice/*
 
 pool:
   ## vmImage: 'ubuntu-latest'
