--- a/Pipelines/Product-docker-CI.yml
+++ b/Pipelines/Product-docker-CI.yml
@@ -5,7 +5,8 @@ trigger:
       - master
   paths:
     include:
-      - ProductMicroservice/*
+      - ProductMicroservice-DotNET-Core-Master/*
+     ## - ProductMicroservice/*
 
 pool:
   ## vmImage: 'ubuntu-latest'
