--- a/ProductMicroservice/ProductMicroservice/Dockerfile
+++ b/ProductMicroservice/ProductMicroservice/Dockerfile
@@ -11,7 +11,8 @@ FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
 #COPY ["ProductMicroservice/ProductMicroservice/ProductMicroservice.csproj", "ProductMicroservice/ProductMicroservice/"]
 COPY ["ProductMicroservice/ProductMicroservice.csproj", "/ProductMicroservice/"]
-RUN dotnet restore "ProductMicroservice/ProductMicroservice.csproj"
+## RUN dotnet restore "ProductMicroservice/ProductMicroservice.csproj"
+ RUN dotnet restore "ProductMicroservice.csproj"
 COPY . .
 WORKDIR "/src/ProductMicroservice/ProductMicroservice"
 RUN dotnet build "ProductMicroservice.csproj" -c Release -o /app/build
