--- a/ProductMicroservice/ProductMicroservice/Dockerfile
+++ b/ProductMicroservice/ProductMicroservice/Dockerfile
@@ -13,7 +13,7 @@ COPY ["/ProductMicroservice/ProductMicroservice.csproj", "ProductMicroservice/"]
 RUN dotnet restore "/ProductMicroservice/ProductMicroservice.csproj"
 COPY . .
 WORKDIR "/src/ProductMicroservice/ProductMicroservice"
-RUN dotnet build "ProductMicroservice.csproj" -c Release -o /app/build
+RUN dotnet build "/ProductMicroservice/ProductMicroservice.csproj" -c Release -o /app/build
 
 FROM build AS publish
 RUN dotnet publish "ProductMicroservice.csproj" -c Release -o /app/publish
