--- a/ProductMicroservice/ProductMicroservice/Dockerfile
+++ b/ProductMicroservice/ProductMicroservice/Dockerfile
@@ -9,17 +9,11 @@ EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
-COPY ["/ProductMicroservice/ProductMicroservice.csproj", "ProductMicroservice/"]
-#RUN dotnet restore "/ProductMicroservice/ProductMicroservice.csproj"
-RUN dotnet restore "ProductMicroservice.csproj"
-## RUN dotnet restore "ProductMicroservicesTest/ProductMicroservicesTest/ProductMicroservicesTest.csproj"
+COPY ["ProductMicroservice/ProductMicroservice/ProductMicroservice.csproj", "ProductMicroservice/ProductMicroservice/"]
+RUN dotnet restore "ProductMicroservice/ProductMicroservice/ProductMicroservice.csproj"
 COPY . .
 WORKDIR "/src/ProductMicroservice/ProductMicroservice"
-## RUN dotnet build "/ProductMicroservice/ProductMicroservice.csproj" -c Release -o /app/build --no-restore
-RUN dotnet build "ProductMicroservice.csproj" -c Release -o /app/build --no-restore
-## RUN dotnet build "ProductMicroservicesTest/ProductMicroservicesTest/ProductMicroservicesTest.csproj" -c Release --no-restore
-
-
+RUN dotnet build "ProductMicroservice.csproj" -c Release -o /app/build
 
 FROM build AS publish
 RUN dotnet publish "ProductMicroservice.csproj" -c Release -o /app/publish
