--- a/Pipelines/Product-docker-CI.yml
+++ b/Pipelines/Product-docker-CI.yml
@@ -25,6 +25,7 @@ stages:
         containerregistrytype: 'Container Registry'
         dockerRegistryEndpoint: 'Docker Hub'
         command: 'Build an image'
+         arguments: --output $(System.DefaultWorkingDirectory)/publish_output --configuration $(buildConfiguration)
         dockerFile: '**/ProductMicroservice/ProductMicroservice/Dockerfile'
         imageName: '$(ImageName)'
         useDefaultContext: false
