--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,4 @@ services:
     image: ${DOCKER_REGISTRY-}productmicroservice
     build:
       context: .
-      dockerfile: ProductMicroservice\ProductMicroservice\Dockerfile
+      dockerfile: ProductMicroservice/ProductMicroservice/Dockerfile
