--- a/Pipelines/Product-docker-CI.yml
+++ b/Pipelines/Product-docker-CI.yml
@@ -8,7 +8,7 @@ trigger:
       - ProductMicroservice/*
       
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'windows-latest'
 
 variables:
   ImageName: 'mehzan07/ProductMicroservice:$(Build.BuildId)'
