--- a/Pipelines/Product-docker-CI.yml
+++ b/Pipelines/Product-docker-CI.yml
@@ -30,7 +30,7 @@ stages:
         imageName: '$(ImageName)'
         useDefaultContext: false
        ## buildContext: 'ProductMicroservice'
-       buildContext:  '$(Build.Repository.LocalPath)'
+       buildContext:  '$(Build.SourcesDirectory)'
       displayName: 'Build the Docker image'
 
     - task: Docker@1      
