Implementation of Mediator, CQRS,  to all files which are changed in this commit

--- a/ProductMicroservice/ProductMicroservice/Properties/launchSettings.json
+++ b/ProductMicroservice/ProductMicroservice/Properties/launchSettings.json
@@ -12,15 +12,15 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-     /* "launchUrl": "api/Product",*/
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "nativeDebugging": false
     },
     "ProductMicroservice": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/Product",
+      "launchUrl": "Swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
