--- a/ProductMicroservice/ProductMicroservice/appsettings.json
+++ b/ProductMicroservice/ProductMicroservice/appsettings.json
@@ -9,9 +9,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
 
-    // THis connection string is for IIS Express
-     "ProductDB": "Data Source=CND7496N83; Initial Catalog=ProductsDB; Integrated Security=true;"
-    //"ProductDB": "Data Source=172.27.224.1,1433; Database=ProductsDB; User ID=sa; Password=Helpdesk1111; MultipleActiveResultSets=true;"
+    // This connection string is for IIS Express
+    // the ConnectionString: ProductsDBConString, shall be used in Startup.cs with:services.AddDbContext<ProductContext>(options => options.UseSqlServer(Configuration.GetConnectionString("ProductsDBConString"))); 
+    "ProductsDBConString": "Data Source=CND7496N83\\SQLEXPRESS; Initial Catalog=ProductsDB; Integrated Security=true; Persist Security Info=True"
+    //"roductsDBConString": "Data Source=172.27.224.1,1433; Database=ProductsDB; User ID=sa; Password=Helpdesk1111; MultipleActiveResultSets=true; Persist Security Info=True"
 
   } 
 }
