Implementation of RabbitMQ for sending message via queue

--- a/ProductMicroservice/ProductMicroservice/appsettings.json
+++ b/ProductMicroservice/ProductMicroservice/appsettings.json
@@ -14,5 +14,12 @@
     "ProductsDBConString": "Data Source=CND7496N83\\SQLEXPRESS; Initial Catalog=ProductsDB; Integrated Security=true; Persist Security Info=True"
     //"roductsDBConString": "Data Source=172.27.224.1,1433; Database=ProductsDB; User ID=sa; Password=Helpdesk1111; MultipleActiveResultSets=true; Persist Security Info=True"
 
-  } 
+  },
+
+  "RabbitMq": {
+    "Hostname": "rabbitmq",
+    "QueueName": "CustomerQueue",
+    "UserName": "user",
+    "Password": "password"
+  }
 }
