--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,12 +38,22 @@ steps:
     arguments: '--no-restore --no-build'
   displayName: 'Run Tests'
  
+-# task: DotNetCoreCLI@2
+  #inputs:
+   # command: 'publish'
+    #publishWebProjects: false
+    #projects: '**/ProductMicroservice.csproj'
+    #arguments: '--configuration $(buildConfiguration) --no-restore'
+    #modifyOutputPath: false
+  #displayName: 'Publish ProductMicroservice'
+  #condition: and(succeeded(), ne(variables['Build.Reason'],'PullRequest'))
+#Publish projects to specified folder.
 - task: DotNetCoreCLI@2
+  displayName: 'dotnet publish'
   inputs:
     command: 'publish'
     publishWebProjects: false
     projects: '**/ProductMicroservice.csproj'
-    arguments: '--configuration $(buildConfiguration) --no-restore'
-    modifyOutputPath: false
-  displayName: 'Publish ProductMicroservice'
-  condition: and(succeeded(), ne(variables['Build.Reason'],'PullRequest'))
+    arguments: '-o $(Build.ArtifactStagingDirectory)/Output'
+    zipAfterPublish: true
+    modifyOutputPath: true
