Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,6 +56,8 @@ steps:
   inputs:
     targetPath: $(Build.ArtifactStagingDirectory)
     artifactName: drop
-- task: DownloadPipelineArtifact@2
-  inputs:
-    artifactName: drop
+- download: current
+  artifact: drop
+  patterns: |
+    **/*.js
+    **/*.zip
