DockerFile for both Debug and Production (Release ) in VS2022.

--- a/ProductMicroservice/ProductMicroservice/Dockerfile_commandLine_and release
+++ b/ProductMicroservice/ProductMicroservice/Dockerfile_commandLine_and release
@@ -7,16 +7,16 @@ FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 1433
-# <add your commands here>
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["ProductMicroservice/ProductMicroservice/ProductMicroservice.csproj", "ProductMicroservice/"]
+COPY ["ProductMicroservice/ProductMicroservice/ProductMicroservice.csproj", "ProductMicroservice/ProductMicroservice/"]
 ## RUN dotnet restore "ProductMicroservice/ProductMicroservice/ProductMicroservice.csproj"
 ##COPY ["ProductMicroservice/ProductMicroservice.csproj", "ProductMicroservice/"]
-RUN dotnet restore "ProductMicroservice/ProductMicroservice.csproj"
-COPY . .
-WORKDIR "/src/ProductMicroservice"
+RUN dotnet restore "ProductMicroservice/ProductMicroservice/ProductMicroservice.csproj"
+##COPY . .
+COPY . ProductMicroservice/
+WORKDIR "/src/ProductMicroservice/ProductMicroservice"
 RUN dotnet build "ProductMicroservice.csproj" -c Release -o /app/build
 
 FROM build AS publish
