--- a/ProductMicroservice/ProductMicroservice/charts/productmicroservice/values.yaml
+++ b/ProductMicroservice/ProductMicroservice/charts/productmicroservice/values.yaml
@@ -15,7 +15,7 @@ imagePullSecrets: []
   # This uses credentials from secret "myRegistryKeySecretName".
   # - name: myRegistryKeySecretName
 service:
-  type: LoadBalancer // ClusterIP changing because of exposing to the externalIP in the productmicroservice.
+  type: LoadBalancer  # ClusterIP changing because of exposing to the externalIP in the productmicroservice.
   port: 80
 
 deployment:
