for Override Appsettings in Kubernetes

--- a/ProductMicroservice/ProductMicroservice/appsettings.json
+++ b/ProductMicroservice/ProductMicroservice/appsettings.json
@@ -24,6 +24,7 @@
     "Hostname": "rabbitmq",
     "QueueName": "CustomerQueue",
     "UserName": "user",
-    "Password": "password"
+    "Password": "password",
+    "Enabled": false //for test it should be disabled with test of ProductMicroservice..
   }
 }
