--- a/ProductMicroservice/ProductMicroservice/charts/productmicroservice/values.yaml
+++ b/ProductMicroservice/ProductMicroservice/charts/productmicroservice/values.yaml
@@ -18,6 +18,9 @@ service:
   type: LoadBalancer  # ClusterIP changing because of exposing to the externalIP in the productmicroservice.
   port: 80
 
+envvariables:
+rabbitmq__enabled: false
+
 deployment:
   containerPort: 80
 
