--- a/ProductMicroservice/ProductMicroservice/appsettings.json
+++ b/ProductMicroservice/ProductMicroservice/appsettings.json
@@ -12,11 +12,11 @@
     // This connection string is for IIS Express
     // the ConnectionString: ProductsDBConString, shall be used in Startup.cs with:services.AddDbContext<ProductContext>(options => options.UseSqlServer(Configuration.GetConnectionString("ProductsDBConString"))); 
 
-   
+
     // "ProductsDBConString": "Data Source=CND7496N83\\SQLEXPRESS; Initial Catalog=ProductsDB; Integrated Security=true; Persist Security Info=True",
-   
-    // this works with both ProductMicroservice and  docker-compose
-    "ProductsDBConString": "Data Source=192.168.1.220,1433; Database=ProductsDB; User ID=sa; Password=Helpdesk1111; MultipleActiveResultSets=true;Persist Security Info=True"
+
+    // this works with both ProductMicroservice and  docker-compose, IP Number is not static, you should check with configip to se the updated ipnumber.
+    "ProductsDBConString": "Data Source=192.168.1.151,1433; Database=ProductsDB; User ID=sa; Password=Helpdesk1111; MultipleActiveResultSets=true;Persist Security Info=True"
 
   },
 
