--- a/ProductMicroservice/ProductMicroservice/charts/productmicroservice/values.yaml
+++ b/ProductMicroservice/ProductMicroservice/charts/productmicroservice/values.yaml
@@ -17,11 +17,10 @@ imagePullSecrets: []
   #  type:ClusterIP change this to type: LoadBalancer to exposing  externalIP in the productmicroservice Service 
 service:
   type: LoadBalancer
-  port: 8080
- 
+  port: 23456
 
 deployment:
-  containerPort: 8080
+  containerPort: 80
 
 probes:
   enabled: false
@@ -70,3 +69,5 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+envvariables:
+rabbitmq__enabled: false
