Implementing probes for kubernetes

--- a/ProductMicroservice/ProductMicroservice/charts/productmicroservice/templates/deployment.yaml
+++ b/ProductMicroservice/ProductMicroservice/charts/productmicroservice/templates/deployment.yaml
@@ -35,12 +35,14 @@ spec:
           {{- if .Values.probes.enabled }}
           livenessProbe:
             httpGet:
-              path: /
+              path: /health
               port: http
+              initialDelaySeconds: 15
           readinessProbe:
             httpGet:
-              path: /
+              path: /health
               port: http
+              initialDelaySeconds: 15
           {{- end }}
           env:
             {{- $root := . }}
