--- a/Pipelines/BildAndPushImageToACR.yml
+++ b/Pipelines/BildAndPushImageToACR.yml
@@ -1,39 +1,84 @@
-# Docker
-# Build and push an image to Azure Container Registry
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
+parameters:
+  - name: buildId
+    type: string
+    default: 
+  - name: patMicroserviceDemoNugetsFeed
+    type: string
+    default: 
+  - name: containerRegistry
+    type: string
+    default: 
+  - name: repository
+    type: string
+    default: 
+  - name: tag
+    type: string
+    default: 
+  - name: artifactName
+    type: string
+    default:
 
-trigger:
-- master
+steps:
+  - task: Docker@2
+    displayName: 'Build Docker Container'
+    inputs:
+      containerRegistry: ${{ parameters.containerRegistry }}
+      repository: ${{ parameters.repository }}
+      command: 'build'
+      Dockerfile: '**/${{ parameters.artifactName }}/${{ parameters.artifactName }}/Dockerfile'
+      buildContext: ${{ parameters.artifactName }}
+      tags: |      
+        ${{ parameters.tag }}
+        latest
+      arguments: '--build-arg BuildId=${{ parameters.buildId }} --build-arg PAT=${{ parameters.patMicroserviceDemoNugetsFeed }}'
+  
+  - pwsh: |
+     $id=docker images --filter "label=test=${{ parameters.buildId }}" -q | Select-Object -First 1
+     docker create --name testcontainer $id
+     docker cp testcontainer:/testresults ./testresults
+     docker rm testcontainer
+    displayName: 'Copy test results' 
+  
+  - task: PublishTestResults@2
+    inputs:
+      testResultsFormat: 'VSTest'
+      testResultsFiles: '**/*.trx'
+      searchFolder: '$(System.DefaultWorkingDirectory)/testresults'
+    displayName: 'Publish test results'
+  
+  - task: PublishCodeCoverageResults@1
+    inputs:
+      codeCoverageTool: 'Cobertura'
+      summaryFileLocation: '$(System.DefaultWorkingDirectory)/testresults/coverage/coverage.cobertura.xml'
+      reportDirectory: '$(System.DefaultWorkingDirectory)/testresults/coverage/reports'
+    displayName: 'Publish code coverage results'
 
-resources:
-- repo: self
+  - pwsh: |
+      $id=docker images --filter "label=dacpac=${{ parameters.buildId }}" -q | Select-Object -First 1
+      docker create --name dacpaccontainer $id
+      docker cp dacpaccontainer:/dacpacs $(Build.ArtifactStagingDirectory)/dacpacs
+      docker rm dacpaccontainer
+    displayName: 'Copy DACPACs'
+  - task: PublishBuildArtifacts@1    
+    inputs:
+      PathtoPublish: '$(Build.ArtifactStagingDirectory)/dacpacs'
+      ArtifactName: 'dacpacs'    
+    displayName: 'Publish DACPAC'
 
-variables:
-  # Container registry service connection established during pipeline creation
-  dockerRegistryServiceConnection: '0b2b2910-db75-430e-b28d-48476c00dcf9'
-  imageRepository: 'mehzanproductmicroservicedotnetcoremaster'
-  containerRegistry: 'mehzancontainerregistry.azurecr.io'
-  dockerfilePath: '$(Build.SourcesDirectory)/ProductMicroservice/ProductMicroservice/Dockerfile'
-  tag: '$(Build.BuildId)'
-
-  # Agent VM image name
-  vmImageName: 'ubuntu-latest'
-
-stages:
-- stage: Build
-  displayName: Build and push stage
-  jobs:
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: $(vmImageName)
-    steps:
-    - task: Docker@2
-      displayName: Build and push an image to container registry
-      inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
+  - task: Docker@2
+    displayName: 'Push Docker Container'
+    inputs:
+      containerRegistry: ${{ parameters.containerRegistry }}
+      repository: ${{ parameters.repository }}
+      command: 'push'
+      tags: |      
+        ${{ parameters.tag }}            
+  - task: Docker@2
+    displayName: 'Push Docker Container'
+    inputs:
+      containerRegistry: ${{ parameters.containerRegistry }}
+      repository: ${{ parameters.repository }}
+      command: 'push'
+      tags: |              
+        latest
+    condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
