Modifying Dockerfile to run BuildAndPushImageToACR.yml

--- a/ProductMicroservice/ProductMicroservice/Dockerfile
+++ b/ProductMicroservice/ProductMicroservice/Dockerfile
@@ -7,9 +7,13 @@ EXPOSE 1433
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["ProductMicroservice/ProductMicroservice/ProductMicroservice.csproj", "ProductMicroservice/ProductMicroservice/"]
-RUN dotnet restore "ProductMicroservice/ProductMicroservice/ProductMicroservice.csproj"
-COPY . .
+##COPY ["ProductMicroservice/ProductMicroservice/ProductMicroservice.csproj", "ProductMicroservice/ProductMicroservice/"]
+## RUN dotnet restore "ProductMicroservice/ProductMicroservice/ProductMicroservice.csproj"
+COPY ["ProductMicroservice/ProductMicroservice.csproj", "ProductMicroservice/"]
+RUN dotnet restore "ProductMicroservice/ProductMicroservice.csproj"
+##COPY . .
+COPY . ProductMicroservice/
+##RUN dotnet build "ProductMicroservice.csproj" -c Release -o /app/build
 WORKDIR "/src/ProductMicroservice/ProductMicroservice"
 RUN dotnet build "ProductMicroservice.csproj" -c Release -o /app/build
 
