--- a/Pipelines/BuildAndPushImageToACR.yml
+++ b/Pipelines/BuildAndPushImageToACR.yml
@@ -2,38 +2,44 @@
 # Build and push an image to Azure Container Registry
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
-trigger:
-- master
 
-resources:
-- repo: self
+name : ProductMicroservice-CI
+trigger:
+  branches:
+    include:
+      - master
+  paths:
+    include:
+      - ProductMicroservice/*
+pool:
+  vmImage: 'windows-latest'
+  
+  demands:
 
 variables:
   # Container registry service connection established during pipeline creation
   dockerRegistryServiceConnection: '22db6458-d057-4880-9fbc-e0be74cb9830'
   imageRepository: 'mehzanproductmicroservicedotnetcoremaster'
   containerRegistry: 'mehzancontainerregistry.azurecr.io'
-  dockerfilePath: '$(Build.SourcesDirectory)/ProductMicroservice/ProductMicroservice/Dockerfile'
-  tag: '$(Build.BuildId)'
+  # dockerfilePath: '$(Build.SourcesDirectory)/ProductMicroservice/ProductMicroservice/Dockerfile'
+  ImageName: 'mehzan07/ProductMicroservice:$(Build.BuildId)'
 
   # Agent VM image name
-  vmImageName: 'ubuntu-latest'
+  # vmImageName: 'ubuntu-latest'
 
 stages:
 - stage: Build
   displayName: Build and push stage
   jobs:
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: $(vmImageName)
-    steps:
-    - task: Docker@2
-      displayName: Build and push an image to container registry
-      inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
+    - job: Build
+      displayName: Build and push Docker image
+      steps:
+      - task: Docker@2
+        displayName: Build and push an image to container registry
+        inputs:
+         command: buildAndPush
+         repository: $(imageRepository)
+         dockerfile: $(dockerfilePath)
+         containerRegistry: $(dockerRegistryServiceConnection)
+         tags: |
+           $(tag)
