Update BuildAndPushToACR.yml for Azure Pipelines

--- a/Pipelines/BuildAndPushToACR.yml
+++ b/Pipelines/BuildAndPushToACR.yml
@@ -8,7 +8,7 @@ trigger:
       - master
   paths:
     include:
-      - ProductMicroservice/*
+      - ProductMicroservice-DotNET-Core-Master/*
 
 resources:
 - repo: self
