--- a/Pipelines/BildAndPushImageToACR.yml
+++ b/Pipelines/BildAndPushImageToACR.yml
@@ -1,10 +1,11 @@
-# Docker
-# Build and push an image to Azure Container Registry
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
-
+name : BuildAndPushToACR-CI-CD
 trigger:
-- master
-
+  branches:
+    include:
+      - master
+  paths:
+    include:
+      - ProductMicroservice-DotNET-Core-Master/*
 resources:
 - repo: self
 
