Update BildAndPushImageToACR.yml for Azure Pipelines

--- a/Pipelines/BildAndPushImageToACR.yml
+++ b/Pipelines/BildAndPushImageToACR.yml
@@ -18,7 +18,9 @@ variables:
   tag: '$(Build.BuildId)'
 
   # Agent VM image name
-  vmImageName: 'ubuntu-latest'
+  #vmImageName: 'ubuntu-latest'
+  vmImageName: 'windows-latest'
+
 
 stages:
 - stage: Build
