--- a/Pipelines/BildAndPushImageToACR.yml
+++ b/Pipelines/BildAndPushImageToACR.yml
@@ -36,7 +36,7 @@ stages:
       inputs:
         command: buildAndPush
         repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
+        # dockerfile: $(dockerfilePath)
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
