--- a/Pipelines/BildAndPushImageToACR.yml
+++ b/Pipelines/BildAndPushImageToACR.yml
@@ -33,4 +33,4 @@ stages:
         repository: $(imageRepository)
         dockerfile: $(dockerfilePath)
         containerRegistry: $(dockerRegistryServiceConnection)
-        tags: | $(tag)
+        tags: $(tag)
