--- a/Pipelines/BuildAndPushImageToACR.yml
+++ b/Pipelines/BuildAndPushImageToACR.yml
@@ -14,6 +14,7 @@ variables:
   imageRepository: 'productmicroservice'
   containerRegistry: 'mehzancontainerregistry.azurecr.io'
   dockerfilePath: '$(Build.SourcesDirectory)/ProductMicroservice/ProductMicroservice/Dockerfile'
+  buildContext: DockerTestWebsiteLinux
   tag: '$(Build.BuildId)'
 
   # Agent VM image name
@@ -34,6 +35,7 @@ stages:
         command: buildAndPush
         repository: $(imageRepository)
         dockerfile: $(dockerfilePath)
+        buildContext: $(dockerfilePath)
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
