Update azure-pipelines-ci.yml for Azure Pipelines

--- a/Pipelines/azure-pipelines-ci.yml
+++ b/Pipelines/azure-pipelines-ci.yml
@@ -8,7 +8,7 @@ trigger:
       - ProductMicroservice-DotNET-Core-Master/*
  
 pool:
-  vmImage: 'windows-latest'
+  vmImage: "ubuntu-latest"
  
 variables:
   buildConfiguration: 'Release'
