Update azure-pipelines-ci.yml for Azure Pipelines

--- a/Pipelines/azure-pipelines-ci.yml
+++ b/Pipelines/azure-pipelines-ci.yml
@@ -7,8 +7,18 @@ trigger:
     include:
       - ProductMicroservice-DotNET-Core-Master/*
  
+  strategy:
+  matrix:
+    linux:
+      imageName: "ubuntu-latest"
+    mac:
+      imageName: "macOS-latest"
+    windows:
+      imageName: "windows-latest"
+  maxParallel: 3
+
 pool:
-  vmImage: "ubuntu-latest"
+  vmImage: $(imageName)
  
 variables:
   buildConfiguration: 'Release'
