Update azure-pipelines-CI.yml for Azure Pipelines

--- a/Pipelines/azure-pipelines-CI.yml
+++ b/Pipelines/azure-pipelines-CI.yml
@@ -40,6 +40,7 @@ steps:
     publishWebProjects: true
     projects: '**/ProductMicroservice.csproj'
     arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+    zipAfterPublish: True
 
     modifyOutputPath: false
   displayName: 'Publish ProductMicroservice'
